# python_flet-maro-app

./: README.md  maro_app.db  pyproject.toml
src/maro_app/: database.py  main.py  models.py
src/maro_app/views/: dashboard.py  individual_titles.py  landowners.py  location_management.py  mother_title_details.py  mother_titles.py
